2010-07-16  Sarah Strong  <sarah.e.strong@gmail.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Clipboard data is lost on exit
        https://bugs.webkit.org/show_bug.cgi?id=27411

        No new tests. To manually test the bug fixed by this patch:
        1) Open an application that uses a webkit webview on a GNOME-based system
        2) Copy some text from that application
        3) Optional: paste it to another application. This should work properly with and without this patch.
        4) Exit the application completely.
        5) Paste:
                  Without this patch, you cannot because your clipboard is empty.
                  With this patch, pasting succeeds.
        I have not included an automated test because of the difficulty of testing behaviour after application exit.

Canonical link: https://commits.webkit.org/54427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63587 268f45cc-cd09-0410-ab3c-d52691b4dbfc